CompiladorFinal_ANTLR/src/GramaticaGYHParser.java


// Generated from GramaticaGYH.g4 by ANTLR 4.7.2

    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaGYHParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, PC=17, 
		OpArit=18, OpRel=19, OpBoolE=20, OpBoolOu=21, Delim=22, Atrib=23, AbrePar=24, 
		FechaPar=25, Var=26, NumInt=27, NumReal=28, Cadeia=29, Espaco=30, Coment=31;
	public static final int
		RULE_programa = 0, RULE_listaDeclaracoes = 1, RULE_listaComandos = 2, 
		RULE_tabelaDeclaracoes = 3, RULE_declaracao = 4, RULE_tipoVar = 5, RULE_expressaoAritmetica = 6, 
		RULE_expressaoAritmeticaAux = 7, RULE_termoAritmetico = 8, RULE_termoAritmeticoAux = 9, 
		RULE_fatorAritmetico = 10, RULE_expressaoRelacional = 11, RULE_expressaoRelacionalAux = 12, 
		RULE_termoRelacional = 13, RULE_operadorBooleano = 14, RULE_tabelaComandos = 15, 
		RULE_comando = 16, RULE_comandoAtribuicao = 17, RULE_comandoEntrada = 18, 
		RULE_comandoSaidaAux = 19, RULE_comandoSaida = 20, RULE_comandoCondicao = 21, 
		RULE_comandoCondicaoAux = 22, RULE_comandoRepeticao = 23, RULE_subAlgoritmo = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "listaDeclaracoes", "listaComandos", "tabelaDeclaracoes", 
			"declaracao", "tipoVar", "expressaoAritmetica", "expressaoAritmeticaAux", 
			"termoAritmetico", "termoAritmeticoAux", "fatorAritmetico", "expressaoRelacional", 
			"expressaoRelacionalAux", "termoRelacional", "operadorBooleano", "tabelaComandos", 
			"comando", "comandoAtribuicao", "comandoEntrada", "comandoSaidaAux", 
			"comandoSaida", "comandoCondicao", "comandoCondicaoAux", "comandoRepeticao", 
			"subAlgoritmo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DEC'", "'PROG'", "'INT'", "'REAL'", "'+'", "'-'", "'*'", "'/'", 
			"'LER'", "'IMPRIMIR'", "'SE'", "'ENTAO'", "'SENAO'", "'ENQTO'", "'INI'", 
			"'FIM'", null, null, null, "'E'", "'OU'", "':'", "':='", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "PC", "OpArit", "OpRel", "OpBoolE", "OpBoolOu", 
			"Delim", "Atrib", "AbrePar", "FechaPar", "Var", "NumInt", "NumReal", 
			"Cadeia", "Espaco", "Coment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramaticaGYH.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private int qtdDecl = 0;
	    private int qtdCmd = 0;
	    private int qtdAtrib = 0;
	    private int qtdEntrada = 0;
	    private int qtdSaida = 0;
	    private int qtdCond = 0;
	    private int qtdRept = 0;
	    private int qtdSubAlg = 0;
	    
	    private TabelaSimbolos tabela = new TabelaSimbolos ();
	    
	    private String _writeVar;
	    private ArrayList<Command> listCmd= new ArrayList<Command>();
	    private GyhProgram programa = new GyhProgram(tabela);
	    
	      public void generateCommand(){
	          programa.generateTarget();
	          System.out.println("\n\n Gerando codigo");
	          }
	    

	public GramaticaGYHParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<TerminalNode> Delim() { return getTokens(GramaticaGYHParser.Delim); }
		public TerminalNode Delim(int i) {
			return getToken(GramaticaGYHParser.Delim, i);
		}
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public ListaComandosContext listaComandos() {
			return getRuleContext(ListaComandosContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(Delim);
			setState(51);
			match(T__0);
			setState(52);
			listaDeclaracoes();
			setState(53);
			match(Delim);
			setState(54);
			match(T__1);
			setState(55);
			listaComandos();
			 
			      	  System.out.println("\n ");
			          System.out.println("Declaracoes: " + qtdDecl);
			          System.out.println("Total de comando: " + qtdCmd);
			          System.out.println("   - Atribuicoes: " + qtdAtrib);
			          System.out.println("   - Entradas: " + qtdEntrada);
			          System.out.println("   - Saidas: " + qtdSaida);
			          System.out.println("   - Condicoes: " + qtdCond);
			          System.out.println("   - Repeticoes: " + qtdRept);
			          System.out.println("   - Subalgoritmos: " + qtdSubAlg);
			          System.out.println("\n ");
			          
			       
			                
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaDeclaracoesContext extends ParserRuleContext {
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public ListaDeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterListaDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitListaDeclaracoes(this);
		}
	}

	public final ListaDeclaracoesContext listaDeclaracoes() throws RecognitionException {
		ListaDeclaracoesContext _localctx = new ListaDeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listaDeclaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Var) {
				{
				{
				setState(58);
				declaracao();
				 qtdDecl++; 
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaComandosContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ListaComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaComandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterListaComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitListaComandos(this);
		}
	}

	public final ListaComandosContext listaComandos() throws RecognitionException {
		ListaComandosContext _localctx = new ListaComandosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listaComandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__13) | (1L << T__14) | (1L << Var))) != 0)) {
				{
				{
				setState(66);
				comando();
				 qtdCmd++; 
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TabelaDeclaracoesContext extends ParserRuleContext {
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public TabelaDeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tabelaDeclaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterTabelaDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitTabelaDeclaracoes(this);
		}
	}

	public final TabelaDeclaracoesContext tabelaDeclaracoes() throws RecognitionException {
		TabelaDeclaracoesContext _localctx = new TabelaDeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tabelaDeclaracoes);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				listaDeclaracoes();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(GramaticaGYHParser.Var, 0); }
		public TerminalNode Delim() { return getToken(GramaticaGYHParser.Delim, 0); }
		public TipoVarContext tipoVar() {
			return getRuleContext(TipoVarContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitDeclaracao(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(Var);
			setState(79);
			match(Delim);
			setState(80);
			tipoVar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoVarContext extends ParserRuleContext {
		public TipoVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterTipoVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitTipoVar(this);
		}
	}

	public final TipoVarContext tipoVar() throws RecognitionException {
		TipoVarContext _localctx = new TipoVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipoVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_la = _input.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoAritmeticaContext extends ParserRuleContext {
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public ExpressaoAritmeticaAuxContext expressaoAritmeticaAux() {
			return getRuleContext(ExpressaoAritmeticaAuxContext.class,0);
		}
		public ExpressaoAritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmetica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterExpressaoAritmetica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitExpressaoAritmetica(this);
		}
	}

	public final ExpressaoAritmeticaContext expressaoAritmetica() throws RecognitionException {
		ExpressaoAritmeticaContext _localctx = new ExpressaoAritmeticaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expressaoAritmetica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			termoAritmetico();
			setState(85);
			expressaoAritmeticaAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoAritmeticaAuxContext extends ParserRuleContext {
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public ExpressaoAritmeticaAuxContext expressaoAritmeticaAux() {
			return getRuleContext(ExpressaoAritmeticaAuxContext.class,0);
		}
		public ExpressaoAritmeticaAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmeticaAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterExpressaoAritmeticaAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitExpressaoAritmeticaAux(this);
		}
	}

	public final ExpressaoAritmeticaAuxContext expressaoAritmeticaAux() throws RecognitionException {
		ExpressaoAritmeticaAuxContext _localctx = new ExpressaoAritmeticaAuxContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expressaoAritmeticaAux);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(T__4);
				setState(88);
				termoAritmetico();
				setState(89);
				expressaoAritmeticaAux();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(T__5);
				setState(92);
				termoAritmetico();
				setState(93);
				expressaoAritmeticaAux();
				}
				break;
			case EOF:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case OpRel:
			case OpBoolE:
			case OpBoolOu:
			case FechaPar:
			case Var:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoAritmeticoContext extends ParserRuleContext {
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public TermoAritmeticoAuxContext termoAritmeticoAux() {
			return getRuleContext(TermoAritmeticoAuxContext.class,0);
		}
		public TermoAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termoAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterTermoAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitTermoAritmetico(this);
		}
	}

	public final TermoAritmeticoContext termoAritmetico() throws RecognitionException {
		TermoAritmeticoContext _localctx = new TermoAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_termoAritmetico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			fatorAritmetico();
			setState(99);
			termoAritmeticoAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoAritmeticoAuxContext extends ParserRuleContext {
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public TermoAritmeticoAuxContext termoAritmeticoAux() {
			return getRuleContext(TermoAritmeticoAuxContext.class,0);
		}
		public TermoAritmeticoAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termoAritmeticoAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterTermoAritmeticoAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitTermoAritmeticoAux(this);
		}
	}

	public final TermoAritmeticoAuxContext termoAritmeticoAux() throws RecognitionException {
		TermoAritmeticoAuxContext _localctx = new TermoAritmeticoAuxContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_termoAritmeticoAux);
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(T__6);
				setState(102);
				fatorAritmetico();
				setState(103);
				termoAritmeticoAux();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(T__7);
				setState(106);
				fatorAritmetico();
				setState(107);
				termoAritmeticoAux();
				}
				break;
			case EOF:
			case T__4:
			case T__5:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case OpRel:
			case OpBoolE:
			case OpBoolOu:
			case FechaPar:
			case Var:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FatorAritmeticoContext extends ParserRuleContext {
		public TerminalNode NumInt() { return getToken(GramaticaGYHParser.NumInt, 0); }
		public TerminalNode NumReal() { return getToken(GramaticaGYHParser.NumReal, 0); }
		public TerminalNode Var() { return getToken(GramaticaGYHParser.Var, 0); }
		public TerminalNode AbrePar() { return getToken(GramaticaGYHParser.AbrePar, 0); }
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public TerminalNode FechaPar() { return getToken(GramaticaGYHParser.FechaPar, 0); }
		public FatorAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fatorAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterFatorAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitFatorAritmetico(this);
		}
	}

	public final FatorAritmeticoContext fatorAritmetico() throws RecognitionException {
		FatorAritmeticoContext _localctx = new FatorAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fatorAritmetico);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NumInt:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(NumInt);
				}
				break;
			case NumReal:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(NumReal);
				}
				break;
			case Var:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				match(Var);
				}
				break;
			case AbrePar:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				match(AbrePar);
				setState(116);
				expressaoAritmetica();
				setState(117);
				match(FechaPar);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoRelacionalContext extends ParserRuleContext {
		public TermoRelacionalContext termoRelacional() {
			return getRuleContext(TermoRelacionalContext.class,0);
		}
		public ExpressaoRelacionalAuxContext expressaoRelacionalAux() {
			return getRuleContext(ExpressaoRelacionalAuxContext.class,0);
		}
		public ExpressaoRelacionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoRelacional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterExpressaoRelacional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitExpressaoRelacional(this);
		}
	}

	public final ExpressaoRelacionalContext expressaoRelacional() throws RecognitionException {
		ExpressaoRelacionalContext _localctx = new ExpressaoRelacionalContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expressaoRelacional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			termoRelacional();
			setState(122);
			expressaoRelacionalAux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoRelacionalAuxContext extends ParserRuleContext {
		public OperadorBooleanoContext operadorBooleano() {
			return getRuleContext(OperadorBooleanoContext.class,0);
		}
		public TermoRelacionalContext termoRelacional() {
			return getRuleContext(TermoRelacionalContext.class,0);
		}
		public ExpressaoRelacionalAuxContext expressaoRelacionalAux() {
			return getRuleContext(ExpressaoRelacionalAuxContext.class,0);
		}
		public ExpressaoRelacionalAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoRelacionalAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).enterExpressaoRelacionalAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaGYHListener ) ((GramaticaGYHListener)listener).exitExpressaoRelacionalAux(this);
		}
	}

	public final ExpressaoRelacionalAuxContext expressaoRelacionalAux() throws RecognitionException {
		ExpressaoRelacionalAuxContext _localctx = new ExpressaoRelacionalAuxContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expressaoRelacionalAux);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpBoolE:
			case OpBoolOu:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				operadorBooleano();
				setState(125);
				termoRelacional();
				setState(126);
				expressaoRelacionalAux();
				}
				break;
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__13:
			case T__14:
			case FechaPar:
			case Var:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

